--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "cube",
+  "name": "url-blocker",
   "version": "1.0",
   "description": "Chrome URL Blocking Extension",
   "permissions": ["webRequest", "webRequestBlocking", "<all_urls>"],
