--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,8 @@
   "background": {
     "scripts": ["main.js"]
   },
-
+  "browser_action": {
+	  "default_icon": "icon.png"
+  },
   "manifest_version": 2
 }
