--- a/manifest.json
+++ b/manifest.json
@@ -9,5 +9,9 @@
   "browser_action": {
 	  "default_icon": "icon.png"
   },
+  "icons": {
+	   "16": "icon16.png",
+	   "48": "icon48.png",
+	 },
   "manifest_version": 2
 }
