--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,9 @@
     "scripts": ["main.js"]
   },
   "browser_action": {
-	  "default_icon": "icon.png"
+	  "default_icon": "icon.png",
+	  "default_title": "URL Blocker",
+	  "default_popup": "popup.html" 
   },
   "icons": {
 	   "16": "icon16.png",
